# gnu-philosophy

./: .gitignore  Makefile.am  README.md  _config.yml  bootstrap  configure.ac  help.mk  include.mk  index.html  index.md  make-site  make-standalone-index  philosophy-evaluation.texi
_layouts/: oitofelix-homepage.html
collection/html/: philosophy.html
collection/txt/: philosophy.txt
homepage/: ANNOUNCEMENT.html  AUTHORS.html  BUGS.html  DONORS.html  MAINTAINERS.html  NEWS.html  README.html  THANKS.html  TODO.html
homepage/manual/: index.html  philosophy.txt
po/: Makefile.am
pot/: Makefile.am  include.mk  local.mk
pot/essays/: Makefile.am  include.mk
pot/release/: Makefile.am  include.mk
src/: Makefile.am  copying.texi  essay-header.texi  include.mk  philosophy.texi  release.texi
src/collection/: Makefile.am  include.mk
src/collection/dbk/: Makefile.am
src/collection/dvi/: Makefile.am
src/collection/html/: Makefile.am
src/collection/info/: Makefile.am
src/collection/pdf/: Makefile.am
src/collection/ps/: Makefile.am  include.mk
src/collection/txt/: Makefile.am
src/collection/xml/: Makefile.am
src/essays/: Makefile.am  a-note-on-software.texi  anatomy-of-a-trivial-patent.texi  avoiding-ruinous-compromises.texi  can-you-trust-your-computer.texi  categories-of-free-and-nonfree-software.texi  computing-progress-good-and-bad.texi  copyleft-pragmatic-idealism.texi  did-you-say-intellectual-property-its-a-seductive-mirage.texi  free-but-shackled-the-java-trap.texi  freedom-or-copyright.texi  freedom-or-power.texi  gnu-general-public-license.texi  gnu-lesser-general-public-license.texi  introduction-to-the-licenses.texi  microsofts-new-monopoly.texi  misinterpreting-copyright-a-series-of-errors.texi  overcoming-social-inertia.texi  releasing-free-software-if-you-work-at-a-university.texi  science-must-push-copyright-aside.texi  selling-free-software.texi  software-patents-and-literary-patents.texi  thank-you-larry-mcvoy.texi  the-danger-of-software-patents.texi  the-free-software-definition.texi  the-free-software-song.texi  the-initial-announcement-of-the-gnu-operating-system.texi  the-javascript-trap.texi  the-problem-is-software-controlled-by-its-developer.texi  the-right-to-read-a-dystopian-short-story.texi  the-x-window-system-trap.texi  translations-of-the-term-free-software.texi  we-can-put-an-end-to-word-attachments.texi  what-is-copyleft.texi  whats-in-a-name.texi  who-does-that-server-really-serve.texi  why-open-source-misses-the-point-of-free-software.texi  why-schools-should-exclusively-use-free-software.texi  why-software-should-be-free.texi  why-upgrade-to-gplv3.texi  (+1 more)
src/help/: Makefile.am  make-help-build.texi  make-help-clean.texi  make-help-clean.txt  make-help-dist.texi  make-help-install.texi  make-help-suffixes.texi  make-help.texi  make-help.txt
src/philosophy-figures/: Makefile.am  a-note-on-software-diagram.txt  categories-of-free-and-nonfree-software-diagram.txt  include.mk  the-free-software-song-score.txt
src/philosophy-figures/tottfs/: Makefile.am  include.mk
src/philosophy-figures/tottfs/free/: Makefile.am  af.txt  ar.txt  be.txt  bg.txt  bn.txt  ca.txt  cs.txt  cy.txt  da.txt  de.txt  el.txt  eo.txt  es.txt  et.txt  fa.txt  fi.txt  fr.txt  ga.txt  he.txt  hi.txt  hr.txt  hu.txt  hy.txt  ia.txt  id.txt  io.txt  is.txt  it.txt  ja.txt  ko.txt  lt.txt  mk.txt  ml.txt  ms.txt  nl.txt  no.txt  pl.txt  pt.txt  ro.txt  (+18 more)
src/philosophy-figures/tottfs/gratis/: Makefile.am  bg.txt  ca.txt  cs.txt  de.txt  et.txt  fr.txt  hi.txt  hr.txt  include.mk  ja.txt  lt.txt  mk.txt  nl.txt  pl.txt  pt.txt  ro.txt  ru.txt  sq.txt  sr.txt  zh-cn.txt  zh-tw.txt
src/release/: ANNOUNCEMENT.texi  AUTHORS.texi  BUGS.texi  DONORS.texi  MAINTAINERS.texi  Makefile.am  NEWS.texi  README.texi  THANKS.texi  TODO.texi
src/standalone/: include.mk
src/standalone/dbk/: Makefile.am
src/standalone/dvi/: Makefile.am
src/standalone/html/: Makefile.am
src/standalone/info/: Makefile.am
src/standalone/pdf/: Makefile.am
src/standalone/ps/: Makefile.am  include.mk
src/standalone/txt/: Makefile.am
src/standalone/xml/: Makefile.am
src/www/: Makefile.am  footer.texi  header.shtml  include.mk  navigation.texi
standalone/html/: a-note-on-software.html  anatomy-of-a-trivial-patent.html  avoiding-ruinous-compromises.html  can-you-trust-your-computer.html  categories-of-free-and-nonfree-software.html  computing-progress-good-and-bad.html  copyleft-pragmatic-idealism.html  did-you-say-intellectual-property-its-a-seductive-mirage.html  free-but-shackled-the-java-trap.html  freedom-or-copyright.html  freedom-or-power.html  gnu-free-documentation-license.html  gnu-general-public-license.html  gnu-lesser-general-public-license.html  index.md  introduction-to-the-licenses.html  linux-and-the-gnu-system.html  microsofts-new-monopoly.html  misinterpreting-copyright-a-series-of-errors.html  overcoming-social-inertia.html  releasing-free-software-if-you-work-at-a-university.html  science-must-push-copyright-aside.html  selling-free-software.html  software-patents-and-literary-patents.html  thank-you-larry-mcvoy.html  the-danger-of-software-patents.html  the-free-software-definition.html  the-free-software-song.html  the-gnu-manifesto.html  the-gnu-project.html  the-initial-announcement-of-the-gnu-operating-system.html  the-javascript-trap.html  the-problem-is-software-controlled-by-its-developer.html  the-right-to-read-a-dystopian-short-story.html  the-x-window-system-trap.html  translations-of-the-term-free-software.html  we-can-put-an-end-to-word-attachments.html  what-is-copyleft.html  whats-in-a-name.html  who-does-that-server-really-serve.html  (+7 more)
standalone/pdf/: index.md
standalone/txt/: a-note-on-software.txt  anatomy-of-a-trivial-patent.txt  avoiding-ruinous-compromises.txt  can-you-trust-your-computer.txt  categories-of-free-and-nonfree-software.txt  computing-progress-good-and-bad.txt  copyleft-pragmatic-idealism.txt  did-you-say-intellectual-property-its-a-seductive-mirage.txt  free-but-shackled-the-java-trap.txt  freedom-or-copyright.txt  index.md  (+36 more)
(+73 files in other folders)
